@@ -72,7 +72,8 @@ void _Export_InputManager()
         .def("instance", &gadget::InputManager::instance, return_value_policy< reference_existing_object >())
         .def("getDisplaySystemElement", &gadget::InputManager::getDisplaySystemElement)
         .def("configureDevice", &gadget::InputManager::configureDevice)
-        .def("updateAllData", &gadget::InputManager::updateAllData)
+        .def("updateAllDevices", &gadget::InputManager::updateAllDevices)
+        .def("updateAllProxies", &gadget::InputManager::updateAllProxies)
         .def("getDevice", &gadget::InputManager::getDevice, return_internal_reference< 1 >())
         .def("addDevice", &gadget::InputManager::addDevice)
         .def("addRemoteDevice", &gadget::InputManager::addRemoteDevice)
